# auto_images

./: Cargo.toml  images.json
src/: main.rs
