[package]
name = "auto_images"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking"]}
serde_json = "1.0.88"

[target.'cfg(target_os = "windows")'.dependencies]
winrt-notification = { git = "https://github.com/Akida31/winrt-notification" }
